# finsight

./: .env.example  .gitignore  Dockerfile  FINSIGHT_PROJECT_DESIGN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/: agent_design.md  architecture.md  backtesting_methodology.md  data_dictionary.md
reports/: AAPL_report.html  AAPL_report.json  tearsheet.html  tearsheet_momentum_12_1.html
scripts/: daily_update.py  generate_report.py  generate_tearsheet.py  init_extensions.sql  paper_trade.py  run_backtest.py  schema.sql  seed_data.py  setup_db.py
src/agents/: aggregator.py  earnings_agent.py  macro_agent.py  news_agent.py  peer_comparison_agent.py  quant_signal_agent.py  regime_detector.py  report_generator.py  supervisor.py
src/agents/prompts/: earnings_analysis.py  macro_assessment.py  news_synthesis.py  peer_comparison.py  quant_signal.py  report_synthesis.py
src/agents/rag/: chunking.py  document_processor.py  embeddings.py  reranker.py  retriever.py
src/agents/schemas/: earnings.py  macro.py  news.py  peer_comparison.py  quant_signal.py  regime.py  report.py
src/agents/tools/: financial_calc.py  fred_api.py  news_api.py  sec_edgar.py
src/config/: logging_config.py  settings.py
src/dashboard/: app.py  sample_data.py
src/dashboard/_pages/: data_explorer.py  live_performance.py  portfolio.py  research.py  risk.py
src/dashboard/pages/: backtest_lab.py  live_performance.py
src/quant/backtest/: engine.py  statistics.py  tearsheet.py  transaction_costs.py  walk_forward.py
src/quant/factors/: base.py  composite.py  low_volatility.py  momentum.py  neutralizer.py  quality.py  value.py
src/quant/portfolio/: optimizer.py  risk.py
src/utils/: rate_limiter.py
tests/: conftest.py
tests/test_agents/: test_aggregator.py  test_earnings_agent.py  test_macro_agent.py  test_news_agent.py  test_peer_comparison_agent.py  test_quant_signal_agent.py  test_rag.py  test_regime_detector.py  test_report_generator.py  test_schemas.py  test_supervisor.py
tests/test_dashboard/: test_live_performance.py  test_sample_data.py
tests/test_data/: test_ingestion.py  test_quality.py
tests/test_quant/: test_backtest.py  test_factors.py  test_portfolio.py
tests/test_scripts/: test_generate_tearsheet.py  test_paper_trade.py
