[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "finsight"
version = "0.1.0"
description = "AI-Powered Investment Research & Quantitative Analysis Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "FinSight Team" }]

dependencies = [
    # Core
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",

    # Quant
    "yfinance>=0.2.31",
    "lightgbm>=4.2",
    "scikit-learn>=1.4",
    "cvxpy>=1.4",
    "shap>=0.44",

    # AI / Agent
    "anthropic>=0.39",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "pdfplumber>=0.11",
    "unstructured>=0.12",
    "sentence-transformers>=2.2",
    "rank-bm25>=0.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "tiktoken>=0.5",

    # Dashboard
    "streamlit>=1.30",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "jinja2>=3.1",

    # Scheduling & Cache
    "apscheduler>=3.10",
    "redis>=5.0",

    # HTTP & Utilities
    "httpx>=0.26",
    "aiohttp>=3.9",
    "tenacity>=8.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
